@@ -1,4 +1,4 @@
-package stroom.index.impl;
+package stroom.index.shared;
 
 import stroom.datasource.api.v2.AbstractField;
 import stroom.datasource.api.v2.DateField;
@@ -6,9 +6,10 @@ import stroom.datasource.api.v2.DocRefField;
 import stroom.datasource.api.v2.IntegerField;
 import stroom.datasource.api.v2.LongField;
 import stroom.datasource.api.v2.TextField;
-import stroom.index.shared.IndexDoc;
+import stroom.docref.DocRef;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
@@ -16,8 +17,12 @@ import java.util.stream.Collectors;
 
 public class IndexShardFields {
 
+    public static final DocRef INDEX_SHARDS_PSEUDO_DOC_REF = new DocRef(
+            "Searchable", "Index Shards", "Index Shards");
+
     public static final String FIELD_NAME_NODE = "Node";
     public static final String FIELD_NAME_INDEX = "Index";
+    public static final String FIELD_NAME_INDEX_NAME = "Index Name";
     public static final String FIELD_NAME_VOLUME_PATH = "Volume Path";
     public static final String FIELD_NAME_VOLUME_GROUP = "Volume Group";
     public static final String FIELD_NAME_PARTITION = "Partition";
@@ -27,7 +32,9 @@ public class IndexShardFields {
     public static final String FIELD_NAME_LAST_COMMIT = "Last Commit";
 
     public static final TextField FIELD_NODE = new TextField(FIELD_NAME_NODE);
-    public static final DocRefField FIELD_INDEX = new DocRefField(IndexDoc.DOCUMENT_TYPE, FIELD_NAME_INDEX);
+    public static final DocRefField FIELD_INDEX = DocRefField.byUuid(IndexDoc.DOCUMENT_TYPE, FIELD_NAME_INDEX);
+    public static final DocRefField FIELD_INDEX_NAME = DocRefField.byNonUniqueName(
+            IndexDoc.DOCUMENT_TYPE, FIELD_NAME_INDEX_NAME);
     public static final TextField FIELD_VOLUME_PATH = new TextField(FIELD_NAME_VOLUME_PATH);
     public static final TextField FIELD_VOLUME_GROUP = new TextField(FIELD_NAME_VOLUME_GROUP);
     public static final TextField FIELD_PARTITION = new TextField(FIELD_NAME_PARTITION);
@@ -36,9 +43,11 @@ public class IndexShardFields {
     public static final TextField FIELD_STATUS = new TextField(FIELD_NAME_STATUS);
     public static final DateField FIELD_LAST_COMMIT = new DateField(FIELD_NAME_LAST_COMMIT);
 
-    private static final List<AbstractField> FIELDS = List.of(
+    // GWT so no List.of
+    private static final List<AbstractField> FIELDS = Arrays.asList(
             FIELD_NODE,
             FIELD_INDEX,
+            FIELD_INDEX_NAME,
             FIELD_VOLUME_PATH,
             FIELD_VOLUME_GROUP,
             FIELD_PARTITION,
